--- a/exmploExerc2.html
+++ b/exmploExerc2.html
@@ -26,7 +26,7 @@ pressione a tecla TAB ou dê um clique fora da caixa de texto.<br>
 </form>
 <!
 --
-O evento onblur ocorre quando um objeto perde o foco.
+O evento onblur ocorre quando um objeto perde o foco. Deu certo
 --
 >
 </body>
