--- a/exmploExerc2.html
+++ b/exmploExerc2.html
@@ -8,7 +8,7 @@ número para saber seu valor ao cubo.</title>
 	<script>
 	function quadrado(x)
 	{
-	document.write(x^2);
+	document.write(x*x);
 	}
 	function cubo(x)
 	{
